--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Joseph Slaughter">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="Basic HTML logo" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://google.com">Google</a></li>
+            <li><a href="https://youtube.com">YouTube</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, facilis?</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, corporis.</p>
+        </section>
+    </main>
+    <aside>
+        <img>
+        <source>
+        https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/rome-italy/2019/1280x800/5-Rome-Temple-2160345.jpg
+    </aside>
+    <footer>
+        <p>Joseph Slaughter
+        </p>
+    </footer>
 </body>
+
 </html>
