--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -31,9 +31,9 @@
         </section>
     </main>
     <aside>
-        <img>
-        <source>
-        https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/rome-italy/2019/1280x800/5-Rome-Temple-2160345.jpg
+        <img
+          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/rome-italy/2019/1280x800/5-Rome-Temple-2160345.jpg"
+          alt="Rome Italy Temple" width="200">
     </aside>
     <footer>
         <p>Joseph Slaughter
