--- a/index.html
+++ b/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
-    <link rel="stylesheet" href="styles/styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Joseph Slaughter | WDD 130</title>
 </head>
 
 <body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it
-        with your own personal details.</p>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+    <main>
+        <h1>Joseph Slaughter | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello, my name is Joseph Slaughter" width="200">
+        <p>
+            Hi! My name is Joseph Slaughter. I’m from California, and I’m balancing school and work
+            while
+            building skills in web development.
+            My wife and I recently had a son, James, who is now 10 months old and trying to learn
+            how to walk!
+            I enjoy spending time with my family, playing hockey, and learning new tech. I’m excited
+            to use
+            this course to get better at building clean, simple websites.
+        </p>
+    </main>
+
+    <footer>
+        <p>Joseph Slaughter</p>
+    </footer>
 </body>
 
 </html>
