--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Joseph Slaughter | WDD 130</title>
+    <meta name="description" content="Joseph Slaughter - WDD 130 course homepage.">
+    <meta name="author" content="Joseph Slaughter">
+
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -29,6 +33,15 @@
             this course to get better at building clean, simple websites.
         </p>
     </main>
+    <aside>
+        <h2>Utah, United States of America</h2>
+        <img src="images/utah.jpg" alt="Scenic landscape representing Utah">
+        <p>
+            My wife and I currently live in Utah where we have been studying and working for the
+            past few years. It is a beautiful place filled with mountainous wildlife and so many
+            activities, so there is always something to do!
+        </p>
+    </aside>
 
     <footer>
         <p>©2026 Joseph Slaughter</p>
