--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
             to use
             this course to get better at building clean, simple websites.
         </p>
+
+        <ul class="box">
+            <li>
+                <a href="https://www.churchofjesuschrist.org/temples/details/albuquerque-new-mexico-temple?lang=eng"
+                  target="_blank" rel="noopener noreferrer">
+                    Albuquerque New Mexico Temple
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.churchofjesuschrist.org/temples/details/provo-city-center-temple?lang=eng"
+                  target="_blank" rel="noopener noreferrer">
+                    Provo City Center Temple
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.churchofjesuschrist.org/temples/details/timpanogos-utah-temple?lang=eng"
+                  target="_blank" rel="noopener noreferrer">
+                    Timpanogos Utah Temple
+                </a>
+            </li>
+        </ul>
+
     </main>
     <aside>
         <h2>Utah, United States of America</h2>
