--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,11 +14,11 @@
 
 <body>
     <header>
-        <img src="images/logo.png" alt="Rapids Rafting Co. Logo" />
+        <img class="logo" src="images/logo.png" alt="Rapids Rafting Co. Logo" />
 
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+            <a class="active" href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -27,7 +27,6 @@
     <main>
         <div class="hero">
             <img src="images/hero.jpg" alt="White water rafting adventure on a river" />
-
             <h1>Rapids Rafting Co.</h1>
 
             <article>
@@ -42,8 +41,9 @@
             </article>
         </div>
 
-        <section>
+        <section class="history">
             <h2>History</h2>
+
             <p>
                 Founded with a love for the river and the outdoors, we started as a small team
                 running local
@@ -51,10 +51,45 @@
                 thrill-seekers.
                 Today we still focus on what matters most: safety, service, and pure adventure.
             </p>
+
+            <img src="images/history.jpg"
+              alt="Guides preparing rafts and safety gear near the river" />
+
+            <p>
+                From calm scenic floats to high-energy whitewater, we match your group to the right
+                trip and
+                guide you through every step. Our team trains constantly so you can focus on the
+                fun.
+            </p>
         </section>
 
-        <section>
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
+
+            <figure>
+                <img src="images/los-dientes.jpg" alt="Los Dientes del Diablo rapids" />
+                <figcaption>Los Dientes del Diablo</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/big-mallard.jpg" alt="Big Mallard rapids" />
+                <figcaption>Big Mallard</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/half-day.jpg" alt="Half Day Adventure rafting trip" />
+                <figcaption>Half Day Adventure</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/rapid-run.jpg" alt="Rapid Run whitewater section" />
+                <figcaption>Rapid Run</figcaption>
+            </figure>
+
+            <figure>
+                <img src="images/thunder-falls.jpg" alt="Thunder Falls rapids" />
+                <figcaption>Thunder Falls</figcaption>
+            </figure>
         </section>
     </main>
 
@@ -62,13 +97,13 @@
         <p>&copy; 2026 Rapids Rafting Co. | Joseph Slaughter</p>
 
         <nav class="socialmedia">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank" rel="noopener">
                 <img src="images/facebook.png" alt="Facebook" />
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank" rel="noopener">
                 <img src="images/instagram.png" alt="Instagram" />
             </a>
-            <a href="https://x.com">
+            <a href="https://x.com" target="_blank" rel="noopener">
                 <img src="images/x_social.png" alt="X" />
             </a>
         </nav>
