--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <img class="logo" src="images/logo.png" alt="Rapids Rafting Co. Logo" />
+        <img class="logo" src="images/logo.png" alt="Rapids Rafting Co. logo" />
 
         <nav>
             <a href="index.html">Home</a>
@@ -25,6 +25,7 @@
     </header>
 
     <main>
+        <!-- HERO -->
         <div class="hero">
             <img src="images/hero.jpg" alt="White water rafting adventure on a river" />
             <h1>Rapids Rafting Co.</h1>
@@ -41,6 +42,7 @@
             </article>
         </div>
 
+        <!-- HISTORY -->
         <section class="history">
             <h2>History</h2>
 
@@ -53,7 +55,7 @@
             </p>
 
             <img src="images/history.jpg"
-              alt="Guides preparing rafts and safety gear near the river" />
+              alt="Rafting guides wearing helmets and preparing boats" />
 
             <p>
                 From calm scenic floats to high-energy whitewater, we match your group to the right
@@ -63,32 +65,33 @@
             </p>
         </section>
 
+        <!-- ADVENTURES -->
         <section class="adventures">
             <h2>Adventure Awaits You!</h2>
 
             <figure>
-                <img src="images/los-dientes.jpg" alt="Los Dientes del Diablo rapids" />
+                <img src="images/rapids.jpg" alt="Powerful whitewater rapids" />
                 <figcaption>Los Dientes del Diablo</figcaption>
             </figure>
 
             <figure>
-                <img src="images/big-mallard.jpg" alt="Big Mallard rapids" />
+                <img src="images/rocky.jpg" alt="Rocky canyon river rapids" />
                 <figcaption>Big Mallard</figcaption>
             </figure>
 
             <figure>
-                <img src="images/half-day.jpg" alt="Half Day Adventure rafting trip" />
+                <img src="images/halfday.jpg" alt="Half day rafting adventure" />
                 <figcaption>Half Day Adventure</figcaption>
             </figure>
 
             <figure>
-                <img src="images/rapid-run.jpg" alt="Rapid Run whitewater section" />
-                <figcaption>Rapid Run</figcaption>
+                <img src="images/rush.jpg" alt="Fast moving whitewater river" />
+                <figcaption>Rapid Rush</figcaption>
             </figure>
 
             <figure>
-                <img src="images/thunder-falls.jpg" alt="Thunder Falls rapids" />
-                <figcaption>Thunder Falls</figcaption>
+                <img src="images/fullday.jpg" alt="Full day rafting adventure on the river" />
+                <figcaption>Full Day Adventure</figcaption>
             </figure>
         </section>
     </main>
@@ -104,7 +107,7 @@
                 <img src="images/instagram.png" alt="Instagram" />
             </a>
             <a href="https://x.com" target="_blank" rel="noopener">
-                <img src="images/x_social.png" alt="X" />
+                <img src="images/x_social.png" alt="X (Twitter)" />
             </a>
         </nav>
     </footer>
