--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,36 +2,35 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Rapids Rafting Co.</title>
     <meta name="description"
-      content="Learn about Rapids Rafting Co.—our mission, history, and why your next adventure starts with us." />
-    <meta name="author" content="Joseph Slaughter" />
+      content="Learn about Rapids Rafting Co.—our mission, history, and why your next adventure starts with us.">
+    <meta name="author" content="Joseph Slaughter">
 
-    <link rel="stylesheet" href="styles/rafting.css" />
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
     <header>
-        <img class="logo" src="images/logo.png" alt="Rapids Rafting Co. logo" />
+        <img class="logo" src="images/logo.png" alt="Rapids Rafting Co. logo">
 
         <nav>
             <a href="index.html">Home</a>
             <a class="active" href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">Contact Us</a>
         </nav>
     </header>
 
     <main>
-        <!-- HERO -->
         <div class="hero">
-            <img src="images/hero.jpg" alt="White water rafting adventure on a river" />
+            <img src="images/hero.jpg" alt="White water rafting adventure on a river">
             <h1>Rapids Rafting Co.</h1>
 
             <article>
-                <img src="images/happy-client.jpg" alt="Happy rafting client smiling" />
+                <img src="images/happy-client.jpg" alt="Happy rafting client smiling">
                 <p>
                     Our mission is simple: deliver unforgettable river adventures with expert
                     guides,
@@ -42,7 +41,6 @@
             </article>
         </div>
 
-        <!-- HISTORY -->
         <section class="history">
             <h2>History</h2>
 
@@ -54,8 +52,7 @@
                 Today we still focus on what matters most: safety, service, and pure adventure.
             </p>
 
-            <img src="images/history.jpg"
-              alt="Rafting guides wearing helmets and preparing boats" />
+            <img src="images/history.jpg" alt="Rafting guides wearing helmets and preparing boats">
 
             <p>
                 From calm scenic floats to high-energy whitewater, we match your group to the right
@@ -65,32 +62,31 @@
             </p>
         </section>
 
-        <!-- ADVENTURES -->
         <section class="adventures">
             <h2>Adventure Awaits You!</h2>
 
             <figure>
-                <img src="images/rapids.jpg" alt="Powerful whitewater rapids" />
+                <img src="images/rapids.jpg" alt="Powerful whitewater rapids">
                 <figcaption>Los Dientes del Diablo</figcaption>
             </figure>
 
             <figure>
-                <img src="images/rocky.jpg" alt="Rocky canyon river rapids" />
+                <img src="images/rocky.jpg" alt="Rocky canyon river rapids">
                 <figcaption>Big Mallard</figcaption>
             </figure>
 
             <figure>
-                <img src="images/halfday.jpg" alt="Half day rafting adventure" />
+                <img src="images/halfday.jpg" alt="Half day rafting adventure">
                 <figcaption>Half Day Adventure</figcaption>
             </figure>
 
             <figure>
-                <img src="images/rush.jpg" alt="Fast moving whitewater river" />
+                <img src="images/rush.jpg" alt="Fast moving whitewater river">
                 <figcaption>Rapid Rush</figcaption>
             </figure>
 
             <figure>
-                <img src="images/fullday.jpg" alt="Full day rafting adventure on the river" />
+                <img src="images/fullday.jpg" alt="Full day rafting adventure on the river">
                 <figcaption>Full Day Adventure</figcaption>
             </figure>
         </section>
@@ -101,13 +97,13 @@
 
         <nav class="socialmedia">
             <a href="https://facebook.com" target="_blank" rel="noopener">
-                <img src="images/facebook.png" alt="Facebook" />
+                <img src="images/facebook.png" alt="Facebook">
             </a>
             <a href="https://instagram.com" target="_blank" rel="noopener">
-                <img src="images/instagram.png" alt="Instagram" />
+                <img src="images/instagram.png" alt="Instagram">
             </a>
             <a href="https://x.com" target="_blank" rel="noopener">
-                <img src="images/x_social.png" alt="X (Twitter)" />
+                <img src="images/x_social.png" alt="X (Twitter)">
             </a>
         </nav>
     </footer>
